Fix for bug 21686 -- can't find protocols with non-lowercased names.